# mcp-server

./: .gitignore  .pre-commit-config.yaml  Gemini_Generated_Image_bahqe0bahqe0bahq.drawio  README.md  conteudo_total.txt  databricks.yml  databricks_ops.py  docker-compose.yaml  drift.py  estudo.py  requirements.txt  setup_env.sh  solucao copy.drawio  solucao.drawio
appbricks/: Dockerfile
arquitetura_de_dados/: README.md  base.sql  carga.py  databricks.yml  pyproject.toml  read.py
arquitetura_de_dados/src/: read.py
dashboard/: agent_monitoring_dashboard.lvdash copy.json  agent_monitoring_dashboard.lvdash.json  agent_monitoring_dashboard.yml
infra/: Dockerfile  README.md  agent.yaml  arquitetura_azure.drawio  azurevm.tf  chavepublicausopessoal2.pem  chavepublicausopessoal2.pub  databricks.tf  fff.pem  kubernetes.tf  main.tf  outputs.tf  proviers.tf  resource_grupo.tf  variables.tf
mlops-databricks/: APRESENTACAO_MLOPS.md  APRESENTACAO_TECNICA.md  apreserncao
models/: Credit_Scoring.ipynb  casboost.py  drift.py  job.yaml  job_feature.yaml  job_model.yaml  modelo_fs.py  otimizacao_aplicando_programacao_restricoes.py  otimizacao_implementando_programacao_linear.py  otimizacao_programacao_nao_linear.py  otimizacao_solucoes_inteiras_programacao_linear.py
mp-gemini/: .pre-commit-config.yaml  Dockerfile  Readme copy.md  Readme.md  app.py  config.py  conteudo_total.txt  databricks_ops.py  devops.py  estudo.py  git.py  mcp_server.py  projeto_completo.txt  reproduce_issue.py  requirements.txt
nginx/: streamlists.conf  streamlit.service
server1/: Dockerfile  agent.py  (+11 more)
(+76 files in other folders)
